[package]
name = "genvarloader"
version = "0.2.1"
edition = "2021"
authors = ["David Laub <dlaub@ucsd.edu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "genvarloader"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
bigtools = "0.5.8"
coitrees = "0.4"
crossbeam-channel = "0.5.15"
itertools = "0.14.0"
ndarray = "0.17.2"
numpy = "0.29.0"
rayon = "1.12.0"
seqpro-core = "0.1"
# genoray crates are pulled straight from GitHub (no crates.io publish). Cargo finds
# each package by name inside the repo — no in-repo path is given or needed. Bump `rev`
# to pull newer genoray code; both crates must share the same rev (one clone, one repo).
svar2-codec = { git = "https://github.com/d-laub/genoray.git", rev = "e07477e687c913f9605fc79ea251f1bb3b177aa9" }
genoray_core = { git = "https://github.com/d-laub/genoray.git", rev = "e07477e687c913f9605fc79ea251f1bb3b177aa9", package = "genoray", default-features = false, features = ["conversion"] }

[features]
extension-module = ["pyo3/extension-module"]

[dependencies.pyo3]
version = "0.29"
features = ["abi3-py310"]

[dev-dependencies]
bytemuck = "1"
rstest = "0.26.1"
tempfile = "3"
# For Svar2StreamEngine's Rust unit tests: SVAR2's on-disk layout (var_key/dense CSR
# sidecars, codec-encoded keys) has no SVAR1-style "write raw npy bytes" fixture
# shortcut, so tests build a real finished contig via genoray_core's actual conversion
# pipeline (`process_chromosome`, already a hard dependency via the `conversion`
# feature) fed a synthetic indexed BCF — same approach genoray_core's OWN Rust tests
# use (`tests/common/mod.rs::build_contig`, not reachable from this downstream crate).
# Version/features matched to genoray_core's own choice (see its Cargo.toml) so the
# already-resolved Cargo.lock entry is reused, not a second htslib build.
rust-htslib = { version = "1.0", default-features = false, features = ["libdeflate"] }

# Perf call-graph attribution only (`perf report --children`). Inherits release
# codegen and adds line tables + frame pointers. NEVER the gate artifact — all
# throughput/asm gate numbers come from the plain `--release` build.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
force-frame-pointers = true
