[project]
name = "genvarloader"
version = "0.39.0"
description = "Pipeline for efficient genomic data processing."
authors = [
    { name = "David Laub", email = "dlaub@ucsd.edu" },
    { name = "Aaron Ho", email = "aho@salk.edu" },
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10,<3.14" # >= 3.14 blocked by pyarrow/genoray
dependencies = [
    "seqpro>=0.20",
    # >=3.0.0 is the first release carrying the INFO/FORMAT field-read API gvl relies on.
    "genoray>=3.0.0,<4",
    "numpy",
    "loguru",
    "natsort",
    "polars>=1.37.1",
    "cyvcf2",
    "pandera",
    "pysam",
    "pyarrow",
    "pyranges",
    "pydantic>=2,<3",
    "pydantic-extra-types[semver]>=2.10",
    "more-itertools",
    "tqdm",
    "pybigwig",
    "einops",
    "joblib",
    "pooch",
    "awkward",
    "hirola>=0.3,<0.4",
    "filelock>=3.12",
]

[project.optional-dependencies]
cli = ["genvarloader-cli>=0.1.0"]
tbb = ['tbb']
pyomp = ['pyomp']

[project.urls]
source = "https://github.com/mcvickerlab/GenVarLoader"
documentation = "https://genvarloader.readthedocs.io/en/stable/"
issues = "https://github.com/mcvickerlab/GenVarLoader/issues"

[tool.ruff]
# Enforce Google-style docstrings on the public package. `convention = "google"`
# activates the Google-compatible pydocstyle rules (and disables the NumPy/reST
# ones). The D1xx "missing docstring" rules stay off: we enforce the *style* of
# docstrings that exist, not their presence, on a codebase that predates the rule.
lint.extend-select = ["D"]
lint.ignore = [
    "E501",
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D106", # missing docstring in public nested class
    "D107", # missing docstring in __init__
]
lint.pydocstyle.convention = "google"
# Docstring style is only enforced on the shipped package; tests, docs, one-off
# experiments, and dev scripts are exempt.
lint.per-file-ignores = { "tests/**" = [
    "D",
], "docs/**" = [
    "D",
], "experiments/**" = [
    "D",
], "scripts/**" = [
    "D",
] }

[tool.pyrefly]
project-includes = ["python/genvarloader", "tests"]
# Resolve `genvarloader` to this checkout's `python/` source. Without an
# explicit search-path, pyrefly's heuristics can resolve the package to a
# different checkout (e.g. when this tree is a git worktree nested under the
# main repo), type-checking stale sources and reporting phantom
# unexpected-keyword/missing-attribute errors for newly added public API.
search-path = ["python", "tests"]
disable-search-path-heuristics = true
# Heuristics disabled: pyrefly otherwise auto-excludes our maturin source dir
# `python/` because the name collides with the site-packages heuristic.
disable-project-excludes-heuristics = true
project-excludes = [
    "**/data/**",
    "**/__pycache__/**",
    "**/node_modules/**",
    ".venv/**",
    ".pixi/**",
    "target/**",
]
preset = "strict"

# Per-error relaxations populated empirically below. Each entry MUST carry a
# one-line comment giving the reason for relaxation. The campaign's later PRs
# may tighten these back up as the surrounding code is improved.
[tool.pyrefly.errors]
# Codebase predates strict typing; numpy generics (np.ndarray, etc.) trigger
# this across hundreds of sites. PR8 (naming + type pass) revisits.
implicit-any-type-argument = false
implicit-any-parameter = false
implicit-any-empty-container = false
implicit-any-attribute = false
# Interop with optional deps (taichi, torch.nested internals, pyBigWig case
# mismatch with the pybigwig package). Not actionable in PR0.
missing-import = false
# seqpro.rag re-exports to_padded/reverse_complement from its ._ops submodule
# (both in __all__). They resolve at runtime and type-check standalone, but
# some pyrefly versions can't follow the package re-export and report them as
# missing — inconsistently across environments. WARN rather than inline-ignore
# so it passes regardless of which env reports it (an inline ignore is unused,
# and thus an error, in the envs that resolve the re-export correctly).
missing-module-attribute = "warn"
# seqpro/genoray Ragged exposes record fields via __getattr__ -> Ragged, so
# pyrefly can resolve a method call on a Ragged-typed value (e.g.
# `h_arr.tobytes()`, guarded by hasattr) as calling a Ragged field rather than
# the real ndarray method. Runtime is correct; the false positive surfaces
# inconsistently across environments (linux CI reports it, macOS does not), so
# WARN rather than inline-ignore (which would be an unused-ignore error in the
# env that resolves it correctly).
not-callable = "warn"
# Numpy / awkward / polars operator and iteration interop produces noisy
# false positives. PR5 (Pipeline refactor) and PR8 will revisit.
not-iterable = false
unsupported-operation = false
# Cosmetic Python 3.12 @override decorator — not a behavioral concern.
missing-override-decorator = false
# Polars / narwhals / numpy generic type-var upper-bound friction. Interop.
bad-specialization = false
# ArrayDataset / RaggedDataset overload stubs are inconsistent by design;
# PR3 of the campaign collapses these and the warnings disappear.
bad-override = "warn"
# Mostly the same ArrayDataset / RaggedDataset return-shape drift plus a few
# polymorphic-return sites that PR5/PR6 will narrow. Keep visible as WARN.
bad-return = "warn"
# Default arg mismatch at a few call sites; revisit in PR8 once the
# surrounding code stabilizes.
bad-function-definition = "warn"
# Six call sites with overload friction (seqpro.cast_seqs, Dataset.open,
# numpy.reshape, genoray.get_record_info). Surface but don't block.
no-matching-overload = "warn"
# Soft type drift in places where pyrefly cannot narrow through dynamic
# polars / numpy code paths. Surface as WARN.
bad-argument-type = "warn"
missing-attribute = "warn"
bad-index = "warn"
bad-assignment = "warn"
# TorchDataset alias is `type[...] | (lambda raising NotImplementedError)`
# when torch is unavailable. Two sites; keep visible.
not-a-type = "warn"
# pyrefly resolves Ragged.from_offsets to _array.Ragged (which lacks str_offsets)
# instead of _core.Ragged (which has it). Suppress to avoid blocking commits.
unexpected-keyword = "warn"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.maturin.generate-ci.github]
platform = ['manylinux', 'musllinux', 'windows', 'macos']

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:ray.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:jupyter_client.*",
    "ignore::DeprecationWarning:sorted_nearest.*",
]
markers = [
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
    "parity: rust-vs-frozen-golden differential tests (Rust migration)",
]

[tool.coverage.run]
source = ["python/genvarloader"]
branch = true
omit = [
    "*/tests/*",
    "*/_builders/*",
    "python/genvarloader/_dataset/_intervals.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "raise ImportError\\(\"PyTorch is not available",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
legacy_tag_formats = ['$version']
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_file = 'docs/source/changelog.md'
changlog_incremental = true
changelog_start_rev = "v0.9.1"
template = "docs/source/changelog.md.j2"
major_version_zero = true
allowed_prefixes = [
    "Merge",
    "Revert",
    "Pull request",
    "fixup!",
    "squash!",
    "[pre-commit.ci]",
]

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"
